# cpp-sensor-project

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp  sonar-project.properties
.github/workflows/: build.yml
frontend/: index.html
nginx/: nginx.conf
src/: Analyzer.cpp  Analyzer.h  main.cpp
tests/: CMakeLists.txt  test_analyzer.cpp
